--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node bin/dev",
     "clean": "rm -rf dist",
-    "build": "npm run clean && mkdir dist && babel server -s -d dist",
-    "production": "npm run build && node bin/production",
+    "build": "yarn run clean && mkdir dist && babel server -s -d dist",
+    "production": "yarn run build && node bin/production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
