--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node bin/dev",
     "clean": "rm -rf dist",
     "build": "yarn run clean && mkdir dist && babel server -s -d dist",
-    "production": "yarn run build && node bin/production",
+    "production": "yarn run build && sudo node bin/production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
